--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module">
+      import { Buffer } from 'buffer';
+      window.Buffer = Buffer;
+    </script>
     <script type="module" src="/src/frontend/main.tsx"></script>
   </body>
 </html>
